<resources>
    <string name="app_name">BaiWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forecast">Forecast</string>
    <string name="explore">Explore</string>
    <string name="bookmark">Bookmarks</string>
    <string name="current">Current</string>
    <string name="daily">Daily</string>
    <string name="onboarding">onBoarding</string>
    <!--    <string name="baiweather_forecast">BaiWeather Forecast</string>-->
    <string name="baiweather_forecast"><font color="#FF731D">BaiWeather \n</font><font color="white">Forecast</font></string>
    <string name="temperatures"><font color="black"> %1$d°/</font><font color="white"> %2$d°</font></string>
    <string name="temperature">%1$d °C</string>
    <string name="speed">%1$.2f km/h</string>
    <string name="gradus">%1$d °</string>
    <string name="percentage">%1$.2f %%</string>
    <string name="rain_intensity">%1$.2f mm/h</string>
    <string name="pressure_intensity">%1$.2f hPa</string>
    <string name="weather_desc">%1$s - %2$s</string>
    <string name="get_start">Get Start</string>
    <string name="now">Now</string>
    <string name="location_location">Location, location</string>
    <string name="high">High: </string>
    <string name="low"> \u2022 Low: </string>
    <string name="today">Today</string>
    <string name="_5_day_forecast">5 Day Forecast</string>
    <string name="feels_like">"Feels like: "</string>
    <string name="_0_c">0 C</string>
    <string name="_36_c">36 C</string>
    <string name="_34_c">34`c</string>
    <string name="hourly">Hourly</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="search_here">Search here...</string>
    <string name="requestkey">requestKey</string>
    <string name="fromexplore">fromExplore</string>
    <string name="my_cities">My Cities</string>
    <string name="required_permissions">Required Permissions!</string>
    <string name="allow_app_to_access_your_location">Allow app to access your location</string>
    <string name="go_settings">Go Settings</string>
    <string name="later">later</string>
    <string name="alert">alert</string>
    <string name="isfavourite">isFavourite</string>


</resources>