<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".presentation.ui.fragments.ForecastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_back"
        android:paddingHorizontal="16dp"
        android:paddingTop="48dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/map"
            android:drawablePadding="8dp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/location_location"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/ivDarkMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/tvLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvLocation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/now"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvLocation"
            app:layout_constraintTop_toBottomOf="@id/tvLocation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:text="@string/now"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivWeather" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFeels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:text="@string/feels_like"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvFeelsLike"
            app:layout_constraintStart_toStartOf="@+id/tvHigh"
            app:layout_constraintTop_toBottomOf="@id/tvLowTemperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="end"
            android:text="@string/_0_c"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tvFeels"
            app:layout_constraintTop_toTopOf="@id/tvFeels" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/_36_c"
            android:textColor="@color/secondary_text"
            android:textSize="52sp"
            app:layout_constraintStart_toStartOf="@id/tvNow"
            app:layout_constraintTop_toBottomOf="@id/tvNow" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivWeather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTemperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTemperature"
            app:layout_constraintTop_toTopOf="@+id/tvTemperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/high"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tvTemperature"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHighTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_34_c"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvHigh"
            app:layout_constraintStart_toEndOf="@id/tvHigh"
            app:layout_constraintTop_toTopOf="@+id/tvHigh" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/low"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvHighTemperature"
            app:layout_constraintStart_toEndOf="@id/tvHighTemperature"
            app:layout_constraintTop_toTopOf="@+id/tvHighTemperature" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLowTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_34_c"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tvLow"
            app:layout_constraintStart_toEndOf="@id/tvLow"
            app:layout_constraintTop_toTopOf="@+id/tvLow" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clWeather"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorColor="@color/yellow"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="@color/yellow"
        app:tabTextColor="@color/background_secondary"
        app:tabUnboundedRipple="true" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="@id/tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="@id/tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/background_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="@id/tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/yellow"
        android:gravity="center"
        android:id="@+id/tvError"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tab_layout"
        app:layout_constraintStart_toStartOf="@id/tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>